--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
-plugins {
-    id 'java'
-    id 'application'
+apply plugin: 'kotlin'
+apply plugin: 'application'
+
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41'
+    }
 }
+
 repositories {
     jcenter()
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.41'
     testImplementation 'junit:junit:4.12'
 }
 
